--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -69,6 +69,7 @@ body {
 
 img {
     max-width: 100%;
+    display: block;
 }
 
 /* ===================component css====================== */
@@ -543,7 +544,7 @@ header ul a:hover,
     bottom: 0;
     transition: all 0.5s;
     left: 0;
-    background: #f9f5f5;
+    background-color: #f9f5f5;
     height: 1px;
     width: 0;
 }
@@ -582,11 +583,11 @@ header ul a:hover,
     padding: 100px 0 70px;
 }
 
-.choose-contant .tex h3 i {
+.why-choose .tex h3 i {
     color: var(--mainColor);
 }
 
-.choose-contant .tex h3 {
+.why-choose .tex h3 {
     font-size: 19px;
     margin: 15px 0;
 }
@@ -673,11 +674,11 @@ header ul a:hover,
     background-color: var(--optionalColor);
 }
 
-.tex h3 {
+.project-info h3 {
     transition: all 0.5s;
 }
 
-.tex h3:hover {
+.project-info h3:hover {
     color: var(--mainColor);
 }
 
@@ -703,33 +704,48 @@ header ul a:hover,
     padding-top: 70px;
 }
 
-.feature-icon li {
+.feature-icon .fe-list {
    text-align: center;
+   transition: all 0.5s;
+}
+.fe-list i{
+    transition: all 0.5s;
 }
 .feature-icon .icon-con{
-    font-size: 16px;
+    font-size: 18px;
     text-transform: lowercase;
 }
-.feature-icon li:nth-child(2) i{
-    color: #22a2de;
+.fa-object-group{
+    color: #0000ff;
 }
-.feature-icon li{
+.fa-people-group{
+    color: var(--optionalColor);
+}
+.fa-bullhorn{
+    color: purple;
+}
+.fa-chart-line{
+    color: orangered;
+}
+.fa-computer{
+    color: blue;
+}
+.fa-laptop{
+    color: palevioletred;
+}
+.feature-icon .fe-list {
     /* margin-right: 5px; */
     font-size: 40px;
     padding: 30px 30px;
-    width: 185px;
-    transition: all 0.5s ;
+    width: 200px;
     background-color: var(--whiteColor);
     box-shadow: 0 0 7px -2px rgba(0, 0, 0, 0.2);
 }
-.feature-icon li:hover{
+.feature-icon .fe-list:hover{
     background-color: var(--mainColor);
     color: var(--whiteColor);
 }
-.feature-icon i{
-    transition: all 0.3s;
-}
-.feature-icon li:hover i{
+.feature-icon .fe-list:hover i{
     color: var(--whiteColor);
 }
 .features-contant+.col-6 {
@@ -741,7 +757,6 @@ header ul a:hover,
 }
 
 .features-contant ul li {
-    /* background-color: var(--grayColor); */
     position: relative;
     z-index: 1;
     padding: 13px 5px 13px 10px;
@@ -788,11 +803,176 @@ header ul a:hover,
     color: var(--optionalColor);
     background-color: var(--whiteColor);
 }
-
+.features-list{
+    margin-right: 50px;
+}
 .features-list li {
     font-size: 15.5px;
     font-weight: 600;
 }
 .feature-icon .tex{
     font-size: 10px;
+}
+
+/* =========team-info=========*/
+
+.team-info{
+    padding: 100px 0 70px;   
+}
+.team-img img{
+    transition: all 0.5s;
+}
+.team-info .card-data{
+    margin-right: 20px;
+    box-shadow: 0 0 7px -2px rgba(0, 0, 0, 0.2);    
+    transition: all 0.5s;
+}
+.team-info .card-data,
+.team-img{
+    overflow: hidden;
+}
+.card-data:hover img{
+    transform: scale(1.2);
+}
+.team-name{
+    text-align: center;
+    padding: 20px;
+    transition: all 0.5s;
+    background-color: var(--whiteColor);
+}
+.card-data:hover .team-name{
+    background-color: var(--mainColor);
+    color: var(--whiteColor);
+}
+.mem-id{
+    transition: all 0.5s ease;
+    position: relative;
+}
+.mem-id:hover{
+    transform: translateY(-10px);
+}
+.mem-id .id-link{
+    position: absolute;
+    top: 10%;
+    padding: 4px 7px;
+    color: var(--mainColor);
+    background-color: var(--whiteColor);
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 50px;
+    opacity: 0;
+    transition: all 0.5s cubic-bezier(0.97, 0.64, 0.19, 1.21);
+    visibility: hidden;
+}
+.mem-id .id-link .fa-facebook-f:hover , 
+.mem-id .id-link .fa-twitter:hover , 
+.mem-id .id-link .fa-instagram:hover {
+    color:var(--optionalColor);
+}
+.team-info .card-data:hover .id-link{
+    opacity: 1;
+    top: 35%;
+    visibility:visible;
+}
+.mem-id .id-link i{
+    padding: 5px;
+    font-size: 20px;
+    transition: all 0.5s;
+}
+/* ==============sub-plans============== */
+.sub-plans{
+    padding: 100px 0 70px;
+}
+.sub-plans .heading h2{
+    margin-bottom: 5px;
+}
+.sub-plans .tex p{
+    max-width: 570px;
+    text-align: center;
+    margin: 0 auto;
+}
+.sub-cards{
+    background-color: var(--whiteColor);
+    border-radius: 5px;
+    width: 420px;
+    overflow: hidden;
+    box-shadow: 0 0 25px -10px rgba(0, 0, 0, 0.2);
+    height: auto;
+}
+.sub-name{
+    text-align: center;
+    padding: 20px 0;
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--whiteColor);
+    background-color: #000dff;
+}
+.sub-prices .sub,.sub-prices .sub{
+    font-size: 15px;
+    color: #515872;
+}
+.sub-prices{
+    padding: 30px 0;
+    font-size: 30px;
+    font-weight: 700;
+    text-align: center;
+}
+.about-sub li{
+    padding: 15px 0;
+}
+.about-sub ul{
+    padding-bottom: 50px;
+}
+.about-sub i{
+    padding: 0 20px;
+    color: green;
+}
+.about-sub .sub-about-list{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+.about-sub .fa-xmark{
+    color: red;
+}
+.hov-sub a{
+    text-align: center;
+    padding: 20px 0 0 0;
+    display: block;
+    margin-bottom: 20px;
+    font-size: 19px;
+    font-weight: 600;
+}
+.sub-plans .col-4:nth-child(2) .sub-name{
+    background-color: #fa7070;
+}
+.sub-plans .col-4:nth-child(3) .sub-name{
+    background-color: rgb(255, 166, 0);
+}
+.sub-plans .col-4:nth-child(1) a{
+    color: #0000ff;
+}
+.sub-plans .col-4:nth-child(2) a{
+    color: #fa7070;
+}
+.sub-plans .col-4:nth-child(3) a{
+    color: rgb(255, 166, 0);
+}
+.hov-sub{
+    position: relative;
+    width: max-content;
+}
+.ul-hover{
+    margin: 0 auto;
+    width: max-content;
+}
+.ul-hover::after{
+    position: absolute;
+    content: "";
+    bottom: 0;
+    transition: all 0.5s;
+    left: 0;
+    background-color: #000000;
+    height: 1px;
+    width: 100%;
 }
